[package]
name = "mjolnir"
version = "0.1.0"
edition = "2021"
description = "A simple 3D engine written in Rust for the web"
repository = "https://github.com/erwanvivien/mjolnir"
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Adds support for WASM
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = "0.27"
env_logger = "0.9"
log = "0.4"
wgpu = "0.14"
pollster = "0.2"
bytemuck = { version = "1.12", features = ["derive"] }
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }
anyhow = "1.0"
cgmath = "0.18"
tobj = { version = "3.2.1", features = ["async"] }
gltf = { version = "1.0" }
instant = "0.1"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }
reqwest = { version = "0.11" }
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
